--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>XMTP Quick Start React</title>
+    <title>MatchCast</title>
   </head>
   <body class="font-mono dark:bg-zinc-900 dark:text-white">
     <div id="root"></div>
